--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,6 @@
 {
     "hosting": "",
-    "maintainer": "",
+    "maintainer": "176526774572810240",
     "game": "default",
     "botblocked": [],
     "pmforward": false,
